<resources>
    <string name="app_name"> Hoopla</string>
    <string name="add">Add</string>
    <string name="add_item">Add a new item</string>
    <string name="title_activity_edit_item">EditItemActivity</string>
    <string name="Name">Name</string>
    <string name="taskName">Name</string>
    <string name="taskNotes">Notes</string>
    <string name="priority">Priority</string>
    <string name="dueDate">Due</string>
    <string name="new_task">New To-do</string>
    <string name="edit_task">Edit</string>
    <string name="view_task">View</string>
    <string name="location">Location</string>
    <string name="add_location">Set task reminder location</string>
    <string name="location_filler">You can set a location for the to-do task here. You will receive a reminder notification if you are in the location neighbourhood.</string>
    <string name="etTitleHint"><font size="15">Add a name to the task</font></string>
    <string name="etNotesHint"><font size="15">Add some notes</font></string>

    <string-array name="priorities">
        <item>LOW</item>
        <item>MEDIUM</item>
        <item>HIGH</item>
    </string-array>


</resources>
