<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/taskName"
            android:id="@+id/textView2"
            android:layout_weight="0.15"
            android:textAlignment="center"
            android:paddingTop="16dp"
            android:textSize="15dp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:id="@+id/etItemTitle"
            android:layout_weight="0.8"
            android:textAlignment="viewStart" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/taskNotes"
            android:id="@+id/textView2"
            android:layout_weight="0.15"
            android:textAlignment="center"
            android:paddingTop="16dp"
            android:textSize="15dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:id="@+id/etItemNotes"
            android:layout_weight="0.8" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="106dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/priority"
            android:textAlignment="center"
            android:paddingTop="24dp"
            android:textSize="15dp" />

        <Spinner
            android:layout_width="278dp"
            android:layout_height="73dp"
            android:id="@+id/spPriority"
            android:spinnerMode="dropdown"
            android:entries="@array/priorities"
            android:theme="@android:style/Widget.TextView.SpinnerItem" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="99dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dueDate"
            android:id="@+id/textView4"
            android:textAlignment="center"
            android:paddingTop="50dp"
            android:textSize="15dp"
            android:layout_weight="2.14" />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="396dp"
            android:id="@+id/dpDueDate"
            android:calendarViewShown="true"
            android:spinnersShown="false"
            android:scaleX="0.9"
            android:scaleY="0.9" />

    </LinearLayout>

</LinearLayout>