<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:paddingTop="16dp"
            android:text="@string/taskName"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/etItemTitle"
            android:layout_width="1dp"
            android:layout_height="56dp"
            android:layout_weight="0.8" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:paddingTop="16dp"
            android:text="@string/taskNotes"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/etItemNotes"
            android:layout_width="1dp"
            android:layout_height="56dp"
            android:layout_weight="0.8" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:paddingTop="25dp"
            android:text="@string/priority"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15dp" />

        <Spinner
            android:id="@+id/spPriority"
            android:layout_width="195dp"
            android:layout_height="60dp"
            android:entries="@array/priorities"
            android:spinnerMode="dropdown"
            android:theme="@android:style/Widget.TextView.SpinnerItem"
            style="@android:style/Widget.Material.Spinner" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/ivCalendar"
            android:src="@drawable/ic_event_black_36dp"
            android:layout_gravity="center_horizontal"
            android:tint="@color/primary" />

        <TextView
            android:id="@+id/tvCalendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.89"
            android:paddingTop="12dp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="299dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/ivLocation"
            android:src="@drawable/ic_place_black_36dp"
            android:layout_gravity="center_horizontal"
            android:tint="@color/primary" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="329dp"
            android:layout_height="78dp"
            android:paddingTop="8dp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/location_filler" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <ImageView
                android:layout_width="280dp"
                android:layout_height="150dp"
                android:id="@+id/ivGoogleStaticImgForLocation"
                android:background="@drawable/imageview_border"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="40dp"
                android:visibility="invisible" />



            <LinearLayout
                android:orientation="vertical"
                android:layout_width="45dp"
                android:layout_height="162dp"
                android:paddingTop="20dp"
                android:layout_weight="0.12">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:id="@+id/ivDeleteLocation"
                    android:layout_gravity="center_vertical|right"
                    android:src="@drawable/ic_delete_white_24dp"
                    android:tint="@color/primary"
                    android:visibility="invisible"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="80dp"
                    android:id="@+id/ivNavigate"
                    android:layout_gravity="center_vertical|right"
                    android:src="@drawable/ic_navigation_black_24dp"
                    android:tint="@color/primary"
                    android:visibility="invisible"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelDialog"
            android:text="Cancel" />


        <Button
            android:id="@+id/btnSave"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saveItem"
            android:text="Save" />
    </LinearLayout>


</LinearLayout>